Package: future.callr
=====================

Version: 0.7.0-9002 [2022-01-29]

NEW FEATURES:

 * Now result() and value() gives a slight more informative error message
   in case the callr process failed with a non-zero exit code.
 

Version: 0.7.0 [2021-11-20]

NEW FEATURES:

 * Add option to configure 'callr' futures to be "supervised" by the 'callr'
   package when setting up the plan, i.e. plan(callr, supervise = TRUE).

 * Now callr-specific orchestration errors are of class CallrFutureError,
   which provides information also on the future that failed.
 

Version: 0.6.1 [2021-05-03]

BUG FIXES:

 * A 'callr' future that produces a large amount of standard error (stderr)
   could stall forever when collecting its results.  The exact reason is
   unknown but the symptom is currently that the underlying 'processx' process
   never terminates, resulting in a never-ending wait for the results.  Since
   futures don't capture stderr in other backends, the workaround for now is
   to discard all stderr output.  Note that messages, warnings, etc. are still
   captured and relayed.
 

Version: 0.6.0 [2021-01-02]

SIGNIFICANT CHANGES:

 * Removed S3 generic function await(), which was used for internal purposes.

NEW FEATURES:

 * Add nbrOfFreeWorkers().

DEPRECATED AND DEFUNCT:

 * Removed S3 generic function await(), which was used for internal purposes.


Version: 0.5.0 [2019-09-27]

SIGNIFICANT CHANGES:

 * resolved() for CallrFuture will launch lazy futures [future (>= 1.15.0)].
 
NEW FEATURES:

 * Debug messages are now prepended with a timestamp.


Version: 0.4.0 [2019-01-05]

NEW FEATURES:

 * Now the future label is exposed in the process information (e.g. top)
   via a dummy --future-label="<label>" argument in the callr system call.

BUG FIXES:

 * plan(callr, workers) where 'workers' being a function would result in
   an error when a future was created.
 

Version: 0.3.1 [2018-07-18]

NEW FEATURES:
