@@ -7,7 +7,9 @@ NEW FEATURES:
 
  * Now result() and value() gives a slight more informative error message
    in case the callr process failed with a non-zero exit code.
- 
+
+ * Now resolved() supports early signalling.
+
 
 Version: 0.7.0 [2021-11-20]
 
